# hexo-word-counter

./: .eslintrc.json  .gitignore  Cargo.toml  README.md  deploy.py  index.js  package.json  postinstall.js  report.csv
.github/workflows/: benchmark.yml  build.sh  build.yml  codeql.yml  deploy.js  deploy.py  linter.yml  npm-publish.yml
lib/: helper.js
pkg/: README.md  package.json  word_counter.d.ts  word_counter.js  word_counter_bg.wasm  word_counter_bg.wasm.d.ts
src/: lib.rs
test/: benchmark.py  benchmark.sh  index.js
